# yew_test

./: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  deps.sh  index.html  index.scss
src/: app.rs  helpers.rs  macros.rs  main.rs  map.rs
src/components/: linechart.rs  mod.rs
src/plot/: bindings.rs  line.rs  mod.rs
src/xml/: generic.rs  locationforecast.rs  mod.rs
